adapting method to java 11